--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@faker-js/faker": "^6.0.0-beta.0",
     "cypress": "^9.5.1",
+    "moment": "^2.29.2",
     "pg": "^8.7.3"
   }
 }
