--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@faker-js/faker": "^6.0.0-beta.0",
     "cypress": "^9.5.1",
     "moment": "^2.29.2",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "underscore": "^1.13.2"
   }
 }
