--- a/.github/workflows/electron-ui-tests.yml
+++ b/.github/workflows/electron-ui-tests.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Chrome UI Tests
+name: Electron UI Tests
 
 # Controls when the workflow will run
 on:
@@ -14,7 +14,7 @@ jobs:
       container: cypress/browsers:node12.18.3-chrome87-ff82
       strategy:
         fail-fast: false
-        
+
         matrix:
           # run copies of the current job in parallel
           containers: [1]
